// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component Loading Loading renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.22)",
          "borderRadius": 10,
          "padding": 50,
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#0000ff"
        hidesWhenStopped={true}
        size="large"
      />
    </View>
  </View>
</Modal>
`;

exports[`component Loading Loading snapshot 1`] = `
<Component
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.22)",
          "borderRadius": 10,
          "padding": 50,
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#0000ff"
        hidesWhenStopped={true}
        size="large"
      />
    </View>
  </View>
</Component>
`;
